--- a/Projeto-integrador.html
+++ b/Projeto-integrador.html
@@ -24,9 +24,9 @@
 
     <div class="flex-container apresentacao">
         <div class="texto-apresentacao">
-            <h1>Carol <br>Turismos</h1>
-            <p>O melhor serviço para você!</p>
-            <a href="">Saiba Mais!</a>
+            <h1 class="apresentacao-item">Carol <br>Turismos</h1>
+            <p class="apresentacao-item">O melhor serviço para você!</p>
+            <a class="apresentacao-item" href="">Saiba Mais!</a>
         </div>
 
         <div>
